Add more robust error handling